crates/nash-solve/tests/snapshots/inference__recovery_direct_alias_nested_keeps_header_type.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nf : ((), ()) -> ()\nf (((True as a), (() as b)) as whole) = whole ()\n"
info: diagnostic
---
nash::type::mismatch

  × `whole` is not a function; received 1 argument.
   ╭─[Main.nash:5:41]
 4 │ f : ((), ()) -> ()
 5 │ f (((True as a), (() as b)) as whole) = whole ()
   ·                                         ─────
   ╰────


nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.unit`, found `Primitive.bool`.
   ╭─[Main.nash:5:6]
 4 │ f : ((), ()) -> ()
 5 │ f (((True as a), (() as b)) as whole) = whole ()
   ·      ──┬──
   ·        ╰── boolean pattern
   ╰────
