crates/nash-solve/tests/snapshots/inference__recovery_direct_annotated_case_keeps_both_mismatches.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nf : ()\nf = case True of\n    True -> (\\x -> x)\n    False -> (\\y -> y)\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
   ╭─[Main.nash:7:15]
 3 │ import Builtin exposing (..)
 4 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 5 │ f = case True of
 6 │     True -> (\x -> x)
 7 │     False -> (\y -> y)
   ·               ───┬───
   ·                  ╰── case branch 2
   ╰────


nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
   ╭─[Main.nash:6:14]
 3 │ import Builtin exposing (..)
 4 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 5 │ f = case True of
 6 │     True -> (\x -> x)
   ·              ───┬───
   ·                 ╰── case branch 1
 7 │     False -> (\y -> y)
   ╰────
