crates/nash-solve/tests/snapshots/inference__recovery_direct_annotated_if_keeps_both_mismatches.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nf : ()\nf = if True then (\\x -> x) else (\\y -> y)\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
   ╭─[Main.nash:5:34]
 3 │ import Builtin exposing (..)
 4 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 5 │ f = if True then (\x -> x) else (\y -> y)
   ·                                  ───┬───
   ·                                     ╰── if branch 2
   ╰────


nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
   ╭─[Main.nash:5:19]
 3 │ import Builtin exposing (..)
 4 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 5 │ f = if True then (\x -> x) else (\y -> y)
   ·                   ───┬───
   ·                      ╰── if branch 1
   ╰────
