crates/nash-solve/tests/snapshots/inference__recovery_direct_cons_tail_keeps_independent_mismatch.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nf : () -> ()\nf (x :: ()) = ()\n"
info: diagnostic
---
nash::type::ambiguous_type

  × Cannot determine type `'a` in `f`.
   ╭─[Main.nash:5:1]
 4 │ f : () -> ()
 5 │ f (x :: ()) = ()
   · ─
   ╰────
  help: Required constraints: Storable 'a

        Add a type annotation that determines this variable.


nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.list 'a`, found `Primitive.unit`.
   ╭─[Main.nash:5:9]
 4 │ f : () -> ()
 5 │ f (x :: ()) = ()
   ·         ─┬
   ·          ╰── list tail pattern
   ╰────


nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.unit`, found `Primitive.list 'a`.
   ╭─[Main.nash:5:4]
 3 │ import Builtin exposing (..)
 4 │ f : () -> ()
   ·     ────┬───
   ·         ╰── declared argument type
 5 │ f (x :: ()) = ()
   ·    ───┬───
   ·       ╰── argument 1 of `f`
   ╰────
