crates/nash-solve/tests/snapshots/inference__recovery_direct_recursive_occurs_precedes_generalization.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\nf x = f\nuse = f ()\nbad : ()\nbad = \\x -> x\n"
---
[
    BadExpr(
        Region {
            start: Position {
                line: 5,
                column: 7,
            },
            end: Position {
                line: 5,
                column: 14,
            },
        },
        Lambda,
        Lambda(
            FlexVar(
                "a",
            ),
            FlexVar(
                "a",
            ),
            [],
        ),
        FromAnnotation(
            "bad",
            0,
            TypedBody,
            Type {
                home: ModuleName {
                    package: Some(
                        PackageName {
                            author: "nash",
                            project: "core",
                        },
                    ),
                    name: "Builtin",
                },
                name: "unit",
                args: [],
            },
        ),
    ),
    InfiniteType {
        region: Region {
            start: Position {
                line: 2,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 2,
            },
        },
        name: "f",
        overall_type: Lambda(
            FlexVar(
                "a",
            ),
            Infinite,
            [],
        ),
    },
]
