crates/nash-solve/tests/snapshots/inference__recovery_field_failures_block_dependent_traits_and_keep_independent_traits-2.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\ntype alias record = { a : () }\nbad : ()\nbad = missing ({ a = (assert Primitive.True) }.field)\nsibling = missing (assert Primitive.True)\n"
info: diagnostic
---
nash::type::missing_field

  × Record has no field `field`.
   ╭─[Main.nash:6:16]
 5 │ bad : ()
 6 │ bad = missing ({ a = (assert Primitive.True) }.field)
   ·                ──────────────────┬──────────────────
   ·                                  ╰── field `field` access
 7 │ sibling = missing (assert Primitive.True)
   ╰────
  help: Did you mean `a`?

        Available fields: { a : unit
        }


nash::type::missing_impl

  × No impl for `Missing unit`.
   ╭─[Main.nash:7:11]
 6 │ bad = missing ({ a = (assert Primitive.True) }.field)
 7 │ sibling = missing (assert Primitive.True)
   ·           ───┬───
   ·              ╰── required by `missing`
   ╰────
  help: Import or define an impl for `Missing unit`.
