crates/nash-solve/tests/snapshots/inference__recovery_field_failures_block_dependent_traits_and_keep_independent_traits-3.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\ntype thing = Thing { a : () }\nbad : thing -> ()\nbad record = missing record.absent\nsibling = missing (assert Primitive.True)\n"
info: diagnostic
---
nash::type::missing_field

  × Record has no field `absent`.
   ╭─[Main.nash:6:22]
 5 │ bad : thing -> ()
 6 │ bad record = missing record.absent
   ·                      ──────┬──────
   ·                            ╰── field `absent` of `record`
 7 │ sibling = missing (assert Primitive.True)
   ╰────
  help: Record type: thing

        Did you mean `a`?

        Available fields: `a`.


nash::type::missing_impl

  × No impl for `Missing unit`.
   ╭─[Main.nash:7:11]
 6 │ bad record = missing record.absent
 7 │ sibling = missing (assert Primitive.True)
   ·           ───┬───
   ·              ╰── required by `missing`
   ╰────
  help: Import or define an impl for `Missing unit`.
