crates/nash-solve/tests/snapshots/inference__recovery_field_failures_block_dependent_traits_and_keep_independent_traits-4.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\ntype thing = Thing { a : () }\nbad : thing -> thing\nbad record = missing { record | a = () }\nsibling = missing ()\n"
info: diagnostic
---
nash::type::update_not_record

  × Cannot update fields of `thing`.
   ╭─[Main.nash:6:33]
 5 │ bad : thing -> thing
 6 │ bad record = missing { record | a = () }
   ·                                 ─
 7 │ sibling = missing ()
   ╰────
  help: Rebuild the value with its constructor.


nash::type::missing_impl

  × No impl for `Missing unit`.
   ╭─[Main.nash:7:11]
 6 │ bad record = missing { record | a = () }
 7 │ sibling = missing ()
   ·           ───┬───
   ·              ╰── required by `missing`
   ╰────
  help: Import or define an impl for `Missing unit`.
