crates/nash-solve/tests/snapshots/inference__recovery_field_failures_block_dependent_traits_and_keep_independent_traits.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\nbad : ()\nbad = missing ((assert Primitive.True).field)\nsibling = missing (assert Primitive.True)\n"
info: diagnostic
---
nash::type::not_a_record

  × Expected a record, found `unit`.
   ╭─[Main.nash:5:16]
 4 │ bad : ()
 5 │ bad = missing ((assert Primitive.True).field)
   ·                ──────────────┬──────────────
   ·                              ╰── field `field` access
 6 │ sibling = missing (assert Primitive.True)
   ╰────


nash::type::missing_impl

  × No impl for `Missing unit`.
   ╭─[Main.nash:6:11]
 5 │ bad = missing ((assert Primitive.True).field)
 6 │ sibling = missing (assert Primitive.True)
   ·           ───┬───
   ·              ╰── required by `missing`
   ╰────
  help: Import or define an impl for `Missing unit`.
